add README and clean up processing notebooks

--- a/ncar12km_indicators/process_era_summary_coverage.ipynb
+++ b/ncar12km_indicators/process_era_summary_coverage.ipynb
@@ -5,9 +5,9 @@
    "id": "5f56bb72-10ef-45fb-aff2-0bfac21122a1",
    "metadata": {},
    "source": [
-    "# Process NCAR 12km AK indicators\n",
+    "# Process era-based indicators summary dataset for Rasdaman coverage\n",
     "\n",
-    "Processing notebook for \"NCAR indicators\", derived from the 12km NCAR BCSD dataset over Alaska."
+    "Use this notebook to derive an era-based summary dataset from the yearly base indicators dataset, where all of the indicators are to be summarized by minimum, mean, and maximum aggregation operations over 30-year periods."
    ]
   },
   {
@@ -24,7 +24,9 @@
     "import xarray as xr\n",
     "import rioxarray\n",
     "from pyproj import Proj, Transformer, CRS\n",
-    "from wrf import PolarStereographic"
+    "from wrf import PolarStereographic\n",
+    "\n",
+    "from config import *"
    ]
   },
   {
@@ -42,9 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir = Path(\"/atlas_scratch/kmredilla/ncar12km_indicators\")\n",
-    "out_dir.mkdir(exist_ok=True)\n",
-    "\n",
     "era_lut = {\n",
     "    \"historical\": \"1980-2009\",\n",
     "    \"midcentury\": \"2040-2069\",\n",
@@ -64,7 +63,7 @@
     "def get_year_slice(era):\n",
     "    \"\"\"Make a slice object from string representation of era\"\"\"\n",
     "    start_year, end_year = era_lut[era].split(\"-\")\n",
-    "    return slice(start_year, end_year)\n"
+    "    return slice(start_year, end_year)"
    ]
   },
   {
@@ -92,7 +91,7 @@
    ],
    "source": [
     "%%time\n",
-    "ds = xr.load_dataset(\"/atlas_scratch/kmredilla/ncar12km_indicators.nc\")"
+    "ds = xr.load_dataset(indicators_fp)"
    ]
   },
   {
@@ -174,7 +173,7 @@
     "        out_da.data = summary_ds[varname].data.round(1)\n",
     "        out_da.data[np.isnan(summary_ds[varname].data)] = null_value\n",
     "        out_da = out_da.rio.write_nodata(null_value)\n",
-    "        out_fp = out_dir.joinpath(temp_out_fp.format(varname, era, model, scenario, aggr_var))\n",
+    "        out_fp = era_summary_out_dir.joinpath(temp_out_fp.format(varname, era, model, scenario, aggr_var))\n",
     "        out_da.rio.to_raster(out_fp, dtype=np.float32)"
    ]
   },
@@ -218,7 +217,7 @@
     "                    out_da.data = summary_ds[varname].data.round(1)\n",
     "                    out_da.data[np.isnan(summary_ds[varname].data)] = null_value\n",
     "                    out_da = out_da.rio.write_nodata(null_value)\n",
-    "                    out_fp = out_dir.joinpath(temp_out_fp.format(varname, era, model, scenario, aggr_var))\n",
+    "                    out_fp = era_summary_out_dir.joinpath(temp_out_fp.format(varname, era, model, scenario, aggr_var))\n",
     "                    out_da.rio.to_raster(out_fp, dtype=np.float32)"
    ]
   },
