remove kelvin correction for hd and cd indices

--- a/ncar12km_indicators/process_era_summary_coverage.ipynb
+++ b/ncar12km_indicators/process_era_summary_coverage.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "id": "adcdf8c1-e699-4bcf-9fb4-fb79089efa8c",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5df961e7-8bda-4f64-be0f-a0b3548ae55d",
    "metadata": {},
    "outputs": [
@@ -84,8 +84,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.82 s, sys: 3.79 s, total: 5.6 s\n",
-      "Wall time: 7.22 s\n"
+      "CPU times: user 2.14 s, sys: 4 s, total: 6.14 s\n",
+      "Wall time: 7.44 s\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "6bec129f-f4f4-44fa-82f6-b7036e20a283",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
     "y = np.arange(ny) * dy + y0\n",
     "\n",
     "proj_ds = ds.assign_coords({\"y\": (\"y\", y), \"x\": (\"x\", x)}).drop([\"latitude\", \"longitude\"])\n",
-    "crs_ds = proj_ds.rio.write_crs(wrf_crs)"
+    "crs_ds = proj_ds.rio.write_crs(wrf_proj_str)"
    ]
   },
   {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 7,
    "id": "314230cc-9dfc-47c2-9b00-876177e7eceb",
    "metadata": {},
    "outputs": [
@@ -151,8 +151,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.01 s, sys: 596 ms, total: 3.61 s\n",
-      "Wall time: 3.68 s\n"
+      "CPU times: user 3.11 s, sys: 758 ms, total: 3.87 s\n",
+      "Wall time: 4.51 s\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 8,
    "id": "2ca3699c-dda7-48ed-a146-32c8e737c0fc",
    "metadata": {},
    "outputs": [
@@ -195,8 +195,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 25.2 s, sys: 4.5 s, total: 29.7 s\n",
-      "Wall time: 30.7 s\n"
+      "CPU times: user 26.3 s, sys: 5.82 s, total: 32.2 s\n",
+      "Wall time: 35.8 s\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
    "id": "3cbdf3bf-2de4-4126-8517-c6ac0f9c2c1e",
    "metadata": {},
    "source": [
-    "end"
+    "This dataset is ready for Rasdaman!"
    ]
   }
  ],
