--- a/ncar12km_indicators/process_indicators.ipynb
+++ b/ncar12km_indicators/process_indicators.ipynb
@@ -26,9 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "ab0bd2eb-751a-4f7b-99e4-c810b6cbd111",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T19:39:21.502167Z",
+     "iopub.status.busy": "2023-06-13T19:39:21.501335Z",
+     "iopub.status.idle": "2023-06-13T19:39:28.904640Z",
+     "shell.execute_reply": "2023-06-13T19:39:28.902617Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -55,16 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "id": "23c6b0b0-be68-4076-b39f-5f67284a3ada",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T19:39:28.909942Z",
+     "iopub.status.busy": "2023-06-13T19:39:28.909624Z",
+     "iopub.status.idle": "2023-06-13T19:40:09.643338Z",
+     "shell.execute_reply": "2023-06-13T19:40:09.641156Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 39.6 s, sys: 7.99 s, total: 47.6 s\n",
-      "Wall time: 40.2 s\n"
+      "CPU times: user 38.5 s, sys: 10 s, total: 48.5 s\n",
+      "Wall time: 40.7 s\n"
      ]
     }
    ],
@@ -87,9 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "id": "5ee4c95c-4658-4c5e-8bc2-579a32fa343d",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T19:40:09.648420Z",
+     "iopub.status.busy": "2023-06-13T19:40:09.648105Z",
+     "iopub.status.idle": "2023-06-13T21:00:40.880162Z",
+     "shell.execute_reply": "2023-06-13T21:00:40.878032Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -98,15 +118,15 @@
      "output_type": "stream",
      "text": [
       "data for rcp45, CCSM4 loaded into memory\n",
-      "rx1day  done, rx5day  done, r10mm  done, cwd  done, cdd  done, hd  done, su  done, wsdi  done, cd  done, dw  done, csdi  done, \n",
+      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, wsdi done, cd done, dw done, csdi done, \n",
       "data for rcp45, MRI-CGCM3 loaded into memory\n",
-      "rx1day  done, rx5day  done, r10mm  done, cwd  done, cdd  done, hd  done, su  done, wsdi  done, cd  done, dw  done, csdi  done, \n",
+      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, wsdi done, cd done, dw done, csdi done, \n",
       "data for rcp85, CCSM4 loaded into memory\n",
-      "rx1day  done, rx5day  done, r10mm  done, cwd  done, cdd  done, hd  done, su  done, wsdi  done, cd  done, dw  done, csdi  done, \n",
+      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, wsdi done, cd done, dw done, csdi done, \n",
       "data for rcp85, MRI-CGCM3 loaded into memory\n",
-      "rx1day  done, rx5day  done, r10mm  done, cwd  done, cdd  done, hd  done, su  done, wsdi  done, cd  done, dw  done, csdi  done, \n",
-      "CPU times: user 1h 5min 40s, sys: 15min 33s, total: 1h 21min 13s\n",
-      "Wall time: 1h 19min 44s\n"
+      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, wsdi done, cd done, dw done, csdi done, \n",
+      "CPU times: user 1h 6min 13s, sys: 16min 14s, total: 1h 22min 28s\n",
+      "Wall time: 1h 20min 31s\n"
      ]
     }
    ],
@@ -116,7 +136,7 @@
     "for scenario in scenarios:\n",
     "    for model in models:\n",
     "        fps = [ncar_dir.joinpath(f\"{model}_{scenario}_BCSD_met_{year}.nc\") for year in range(2006, 2100)]\n",
-    "        results.append(run_compute_indicators(fps, scenario, model))"
+    "        results.append(run_compute_indicators(fps, scenario, model, daymet_ds))"
    ]
   },
   {
@@ -129,16 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "id": "7b49af67-482d-4620-abfd-8a425e038885",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:00:40.888816Z",
+     "iopub.status.busy": "2023-06-13T21:00:40.888456Z",
+     "iopub.status.idle": "2023-06-13T21:01:03.368233Z",
+     "shell.execute_reply": "2023-06-13T21:01:03.366371Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.1 s, sys: 5.23 s, total: 23.4 s\n",
-      "Wall time: 23.4 s\n"
+      "CPU times: user 18 s, sys: 4.45 s, total: 22.5 s\n",
+      "Wall time: 22.5 s\n"
      ]
     }
    ],
@@ -156,16 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "id": "6a6c52f7-922e-487f-90ec-e6cbf1a57e18",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:01:03.373200Z",
+     "iopub.status.busy": "2023-06-13T21:01:03.372875Z",
+     "iopub.status.idle": "2023-06-13T21:03:25.687484Z",
+     "shell.execute_reply": "2023-06-13T21:03:25.685569Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, cd done, dw done, CPU times: user 1min 48s, sys: 32.6 s, total: 2min 21s\n",
-      "Wall time: 2min 21s\n"
+      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, cd done, dw done, CPU times: user 1min 49s, sys: 32.5 s, total: 2min 22s\n",
+      "Wall time: 2min 22s\n"
      ]
     }
    ],
@@ -190,16 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 6,
    "id": "72ad03ab-06f4-4f58-acc8-c70b2834abf1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:03:25.695154Z",
+     "iopub.status.busy": "2023-06-13T21:03:25.694842Z",
+     "iopub.status.idle": "2023-06-13T21:03:25.711375Z",
+     "shell.execute_reply": "2023-06-13T21:03:25.709821Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20.7 ms, sys: 21 µs, total: 20.7 ms\n",
-      "Wall time: 20 ms\n"
+      "CPU times: user 9.39 ms, sys: 96 µs, total: 9.48 ms\n",
+      "Wall time: 9.16 ms\n"
      ]
     }
    ],
@@ -217,9 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "id": "2eb10c42-9dd0-4fe9-aef6-a6363c2bdae5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:03:25.715523Z",
+     "iopub.status.busy": "2023-06-13T21:03:25.715252Z",
+     "iopub.status.idle": "2023-06-13T21:03:26.310131Z",
+     "shell.execute_reply": "2023-06-13T21:03:26.308208Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def replace_nan(da):\n",
@@ -243,9 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "id": "5b28d0ce-3a8a-4aa2-83f6-644f74580346",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:03:26.314924Z",
+     "iopub.status.busy": "2023-06-13T21:03:26.314614Z",
+     "iopub.status.idle": "2023-06-13T21:03:26.365680Z",
+     "shell.execute_reply": "2023-06-13T21:03:26.364240Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# setting different nanmask because different data cubes\n",
@@ -267,9 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "id": "5bc3e3ca-db1c-41f5-88eb-69238a2e796c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:03:26.370269Z",
+     "iopub.status.busy": "2023-06-13T21:03:26.369989Z",
+     "iopub.status.idle": "2023-06-13T21:03:53.444021Z",
+     "shell.execute_reply": "2023-06-13T21:03:53.441795Z"
+    }
+   },
    "outputs": [],
    "source": [
     "indicators_ds = xr.merge([daymet_indicators_ds, proj_indicators_ds])\n",
@@ -286,9 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "id": "ccff33f5-791f-4eaf-adb4-ee6e7b69b04c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:03:53.452187Z",
+     "iopub.status.busy": "2023-06-13T21:03:53.451857Z",
+     "iopub.status.idle": "2023-06-13T21:03:54.209791Z",
+     "shell.execute_reply": "2023-06-13T21:03:54.207790Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for indicator in [\"hd\", \"cd\", \"rx1day\", \"rx5day\"]:\n",
@@ -305,9 +374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "id": "b15f8148-9c23-48be-a6c7-035fe0dbc260",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:03:54.217633Z",
+     "iopub.status.busy": "2023-06-13T21:03:54.217345Z",
+     "iopub.status.idle": "2023-06-13T21:03:54.223306Z",
+     "shell.execute_reply": "2023-06-13T21:03:54.221755Z"
+    }
+   },
    "outputs": [],
    "source": [
     "indicators_ds.attrs = {\n",
@@ -325,9 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 12,
    "id": "b8dff980-e710-48cb-a9b6-4e701fe242d9",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T21:03:54.227526Z",
+     "iopub.status.busy": "2023-06-13T21:03:54.227257Z",
+     "iopub.status.idle": "2023-06-13T21:04:06.440189Z",
+     "shell.execute_reply": "2023-06-13T21:04:06.438427Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -335,8 +417,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 88.6 ms, sys: 4.26 s, total: 4.35 s\n",
-      "Wall time: 12.7 s\n"
+      "CPU times: user 42.6 ms, sys: 4.42 s, total: 4.46 s\n",
+      "Wall time: 12.2 s\n"
      ]
     }
    ],
