add WSDI and CSDI for daymet data

--- a/ncar12km_indicators/process_indicators.ipynb
+++ b/ncar12km_indicators/process_indicators.ipynb
@@ -29,12 +29,7 @@
    "execution_count": 1,
    "id": "ab0bd2eb-751a-4f7b-99e4-c810b6cbd111",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-13T19:39:21.502167Z",
-     "iopub.status.busy": "2023-06-13T19:39:21.501335Z",
-     "iopub.status.idle": "2023-06-13T19:39:28.904640Z",
-     "shell.execute_reply": "2023-06-13T19:39:28.902617Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -65,20 +60,15 @@
    "execution_count": 2,
    "id": "23c6b0b0-be68-4076-b39f-5f67284a3ada",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-13T19:39:28.909942Z",
-     "iopub.status.busy": "2023-06-13T19:39:28.909624Z",
-     "iopub.status.idle": "2023-06-13T19:40:09.643338Z",
-     "shell.execute_reply": "2023-06-13T19:40:09.641156Z"
-    }
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 38.5 s, sys: 10 s, total: 48.5 s\n",
-      "Wall time: 40.7 s\n"
+      "CPU times: user 35 s, sys: 9.79 s, total: 44.8 s\n",
+      "Wall time: 42.3 s\n"
      ]
     }
    ],
@@ -183,34 +173,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6a6c52f7-922e-487f-90ec-e6cbf1a57e18",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-13T21:01:03.373200Z",
-     "iopub.status.busy": "2023-06-13T21:01:03.372875Z",
-     "iopub.status.idle": "2023-06-13T21:03:25.687484Z",
-     "shell.execute_reply": "2023-06-13T21:03:25.685569Z"
-    }
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, cd done, dw done, CPU times: user 1min 49s, sys: 32.5 s, total: 2min 22s\n",
-      "Wall time: 2min 22s\n"
+      "rx1day done, rx5day done, r10mm done, cwd done, cdd done, hd done, su done, wsdi done, cd done, dw done, csdi done, CPU times: user 5min 40s, sys: 1min 27s, total: 7min 8s\n",
+      "Wall time: 7min 9s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "summary_das = []\n",
-    "# note, WSDI and CSDI are have been dropped - no historical data\n",
-    "# TO-DO: add these back in, but just use the same time period!\n",
-    "for indicator in [\"rx1day\", \"rx5day\", \"r10mm\", \"cwd\", \"cdd\", \"hd\", \"su\", \"cd\", \"dw\"]:\n",
+    "for indicator in indicators:\n",
     "    varname = indicator_varname_lu[indicator]\n",
-    "    summary_das.append(compute_indicator(daymet_ds[varname], indicator, \"historical\", \"daymet\"))\n",
+    "    kwargs = {}\n",
+    "    if indicator in [\"wsdi\", \"csdi\"]:\n",
+    "        kwargs = {\"hist_da\": daymet_ds[varname]}\n",
+    "    summary_das.append(compute_indicator(daymet_ds[varname], indicator, \"historical\", \"daymet\", kwargs))\n",
     "    print(indicator, \"done\", end=\", \")"
    ]
   },
@@ -224,23 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "72ad03ab-06f4-4f58-acc8-c70b2834abf1",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-13T21:03:25.695154Z",
-     "iopub.status.busy": "2023-06-13T21:03:25.694842Z",
-     "iopub.status.idle": "2023-06-13T21:03:25.711375Z",
-     "shell.execute_reply": "2023-06-13T21:03:25.709821Z"
-    }
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.39 ms, sys: 96 µs, total: 9.48 ms\n",
-      "Wall time: 9.16 ms\n"
+      "CPU times: user 17.6 ms, sys: 2.69 ms, total: 20.3 ms\n",
+      "Wall time: 20.8 ms\n"
      ]
     }
    ],
@@ -258,15 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2eb10c42-9dd0-4fe9-aef6-a6363c2bdae5",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-13T21:03:25.715523Z",
-     "iopub.status.busy": "2023-06-13T21:03:25.715252Z",
-     "iopub.status.idle": "2023-06-13T21:03:26.310131Z",
-     "shell.execute_reply": "2023-06-13T21:03:26.308208Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -291,22 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5b28d0ce-3a8a-4aa2-83f6-644f74580346",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-13T21:03:26.314924Z",
-     "iopub.status.busy": "2023-06-13T21:03:26.314614Z",
-     "iopub.status.idle": "2023-06-13T21:03:26.365680Z",
-     "shell.execute_reply": "2023-06-13T21:03:26.364240Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
     "# setting different nanmask because different data cubes\n",
     "nan_mask = np.isnan(daymet_indicators_ds[\"rx1day\"])\n",
     "\n",
-    "for indicator in [\"r10mm\", \"cwd\", \"cdd\", \"su\", \"dw\"]:\n",
+    "for indicator in [\"r10mm\", \"cwd\", \"cdd\", \"su\", \"dw\", \"wsdi\", \"csdi\"]:\n",
     "    # um this array isn't writeable? never seen this before\n",
     "    daymet_indicators_ds[indicator].values.setflags(write=1)\n",
     "    daymet_indicators_ds[indicator] = replace_nan(daymet_indicators_ds[indicator]).astype(np.int32)"
